--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -1,5 +1,7 @@
 parameters:
-  twig.path: "%tempalte_dir%/views"
+  twig.paths:
+    - "%template_dir%/views"
+    - "%template_dir%/vendor/symfony/twig-bridge/Resources/views/Form"
   twig.options:
     debug:            "%WP_DEBUG%"
     charset:          "utf-8"
@@ -12,22 +14,51 @@ parameters:
 services:
   http:
     class: "Symfony\\Component\\Form\\Extension\\HttpFoundation\\HttpFoundationExtension"
+  session:
+    class: "Symfony\\Component\\HttpFoundation\\Session\\Session"
   translater:
     class: "Symfony\\Component\\Translation\\Translator"
     arguments: ["en"]
+  form:
+    class: "Symfony\\Component\\Form\\FormFactoryBuilder"
+    factory: ["Symfony\\Component\\Form\\Forms", "createFormFactoryBuilder"]
+    calls:
+      - ["addExtension", ["@http"]]
+      - ["addExtension", ["@form.csrf_extension"]]
+  csrf.token_generator:
+    class: "Symfony\\Component\\Security\\Csrf\\TokenGenerator\\UriSafeTokenGenerator"
+  csrf.session_starage:
+    class: "Symfony\\Component\\Security\\Csrf\\TokenStorage\\SessionTokenStorage"
+    arguments: ["@session"]
+  csrf.token_manager:
+    class: "Symfony\\Component\\Security\\Csrf\\CsrfTokenManager"
+    arguments: ["@csrf.token_generator", "@csrf.session_starage"]
   twig.loader:
     class: "Twig_Loader_Filesystem"
-    arguments: ["%twig.path%"]
+    arguments: ["%twig.paths%"]
   twig.debug:
     class: "Twig_Extension_Debug"
-  twig.acf:
-    class: "Sayenko\\Twig\\ACF"
-  twig.wordpress:
-    class: "Sayenko\\Twig\\WordPress"
+  twig.form_translation:
+    class: "Symfony\\Bridge\\Twig\\Extension\\TranslationExtension"
+    arguments: ["@translater"]
+  twig.form_engine:
+    class: "Symfony\\Bridge\\Twig\\Form\\TwigRendererEngine"
+    arguments: [["form_div_layout.html.twig"]]
+    calls:
+      - ["setEnvironment", ["@twig.environment"]]
+  form.csrf_extension:
+    class: "Symfony\\Component\\Security\\Extension\\Csrf\\CsrfExtension" #"Symfony\\Component\\Form\\Extension\\Csrf\\CsrfExtension"
+    arguments: ["@csrf.token_manager"]
+  twig.form_renderer:
+    class: "Symfony\\Bridge\\Twig\\Form\\TwigRenderer"
+    arguments: ["@twig.form_engine"]
+  twig.form_extension:
+    class: "Symfony\\Bridge\\Twig\\Extension\\FormExtension"
+    arguments: ["@twig.form_renderer"]
   twig.environment:
     class: "Twig_Environment"
     arguments: ["@twig.loader", "%twig.options%"]
     calls:
-      - [addExtension, ["@twig.debug"]]
-      - [addExtension, ["@twig.acf"]]
-      - [addExtension, ["@twig.wordpress"]]
+      - ["addExtension", ["@twig.debug"]]
+      - ["addExtension", ["@twig.form_translation"]]
+      - ["addExtension", ["@twig.form_extension"]]
