--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,12 @@
         "symfony/yaml": "^3.0",
         "symfony/dependency-injection": "^3.0",
         "symfony/config": "^3.0",
+        "symfony/form": "^3.0",
+        "symfony/twig-bridge": "^3.0",
         "symfony/translation": "^3.0",
-        "symfony/http-foundation": "^3.0"
+        "symfony/validator": "^3.0",
+        "symfony/http-foundation": "^3.0",
+        "symfony/security-csrf": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.24"
