added csrf support

--- a/App/config/config.yml
+++ b/App/config/config.yml
@@ -17,6 +17,9 @@ services:
     class: "Symfony\\Component\\Form\\Extension\\HttpFoundation\\HttpFoundationExtension"
   session:
     class: "Symfony\\Component\\HttpFoundation\\Session\\Session"
+    arguments: ["@session.bridge"]
+  session.bridge:
+    class: "Symfony\\Component\\HttpFoundation\\Session\\Storage\\PhpBridgeSessionStorage"
   translater:
     class: "Symfony\\Component\\Translation\\Translator"
     arguments: ["en"]
@@ -29,7 +32,8 @@ services:
       - ["addExtension", ["@form.csrf_extension"]]
       - ["addExtension", ["@form.validator_extension"]]
   form.csrf_extension:
-  class: "Symfony\\Component\\Security\\Extension\\Csrf\\CsrfExtension"
+  #class: "Symfony\\Component\\Security\\Extension\\Csrf\\CsrfExtension"
+    class: "Symfony\\Component\\Form\\Extension\\Csrf\\CsrfExtension"
     arguments: ["@csrf.token_manager"]
   form.validator_extension:
     class: "Symfony\\Component\\Form\\Extension\\Validator\\ValidatorExtension"
